--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-aspect-ratio": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.2",
-    "@radix-ui/react-dropdown-menu": "^2.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-separator": "^1.1.1",
@@ -29,7 +29,7 @@
     "clsx": "^2.1.1",
     "convex": "^1.19.5",
     "katex": "^0.16.21",
-    "lucide-react": "^0.471.1",
+    "lucide-react": "^0.471.2",
     "nanoid": "^5.0.9",
     "nanostores": "^0.11.3",
     "next-themes": "^0.4.6",
@@ -44,12 +44,14 @@
     "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "vite-plugin-static-copy": "^2.3.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@tailwindcss/typography": "^0.5.16",
-    "@types/node": "^22.10.6",
+    "@types/chrome": "^0.0.312",
+    "@types/node": "^22.13.13",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
