--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.19.5",
+    "convex-helpers": "^0.1.76",
     "katex": "^0.16.21",
     "lucide-react": "^0.471.2",
     "nanoid": "^5.0.9",
@@ -44,6 +45,9 @@
     "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "use-chrome-storage": "^1.3.2",
+    "use-hooks": "2.0.0-rc.5",
+    "usehooks-ts": "^3.1.1",
     "vite-plugin-static-copy": "^2.3.0",
     "zod": "^3.24.1"
   },
