--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
+    "@mozilla/readability": "^0.6.0",
     "@nanostores/logger": "^0.4.0",
     "@nanostores/persistent": "^0.10.2",
     "@nanostores/react": "^0.8.4",
