added navigation persistance

--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "use-hooks": "2.0.0-rc.5",
     "usehooks-ts": "^3.1.1",
     "vite-plugin-static-copy": "^2.3.0",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
