--- a/public/manifest.json
+++ b/public/manifest.json
@@ -23,7 +23,7 @@
     "permissions": ["tabs", "tabGroups", "storage", "scripting", "activeTab", "contextMenus"],
     "host_permissions": ["<all_urls>"],
     "web_accessible_resources": [{
-      "resources": ["readability.js", "lib/Readability.js"],
+      "resources": ["readability.js", "lib/Readability.js", "contentExtractor.js"],
       "matches": ["<all_urls>"]
     }],
     "background": {
