--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -28,5 +28,5 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src", "public/content.js", "public/background.js"]
+  "include": ["src", "src/content.ts", "src/background.js"]
 }
